unpackaged/main/default/objects/TF_Proposal__c/TF_Proposal__c.object-meta.xml
<CustomObject>
    <label>Tax Free</label>
    <nameField>
        <displayFormat>TF-{000000}</displayFormat>
        <label>Tax Free Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Free</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>