unpackaged/main/default/objects/TF_Proposal__c/fields/Contract_Start_Date_Month__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date_Month__c</fullName>
    <formula>MONTH( Opportunity__r.Contract_Start_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Start Date Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>