unpackaged/main/default/objects/TF_Proposal__c/fields/Expected_Uplift__c.field-meta.xml
<CustomField>
    <fullName>Expected_Uplift__c</fullName>
    <label>Expected Uplift (%)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>