unpackaged/main/default/objects/TF_Proposal__c/fields/FY15__c.field-meta.xml
<CustomField>
    <fullName>FY15__c</fullName>
    <formula>Days__c / 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FY15 %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>