unpackaged/main/default/objects/TF_Proposal__c/fields/Minus_10__c.field-meta.xml
<CustomField>
    <fullName>Minus_10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Minus 10%</label>
    <type>Checkbox</type>
</CustomField>