unpackaged/main/default/objects/TF_Proposal__c/fields/Refund_Mix_Cash__c.field-meta.xml
<CustomField>
    <fullName>Refund_Mix_Cash__c</fullName>
    <label>Refund Mix : Cash</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>