unpackaged/main/default/objects/TF_Proposal__c/fields/Tax_Free_ID_x18__c.field-meta.xml
<CustomField>
    <fullName>Tax_Free_ID_x18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Free ID x18</label>
    <type>Text</type>
</CustomField>