unpackaged/main/default/objects/TF_Proposal__c/fields/TF_Annual_Forms__c.field-meta.xml
<CustomField>
    <fullName>TF_Annual_Forms__c</fullName>
    <inlineHelpText>Refunded Forms</inlineHelpText>
    <label>TF : Annual Forms</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>