unpackaged/main/default/objects/TF_Proposal__c/fields/TF_Annual_GC__c.field-meta.xml
<CustomField>
    <fullName>TF_Annual_GC__c</fullName>
    <label>TF : Annual GC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>