unpackaged/main/default/objects/TF_Proposal__c/fields/TF_Annual_NC__c.field-meta.xml
<CustomField>
    <fullName>TF_Annual_NC__c</fullName>
    <formula>TF_Annual_Net_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TF : Annual NC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>