unpackaged/main/default/objects/TF_Proposal__c/fields/TF_Annual_NC_Weighted__c.field-meta.xml
<CustomField>
    <fullName>TF_Annual_NC_Weighted__c</fullName>
    <formula>TF_Annual_NC__c *  Opportunity__r.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TF: Annual NC Weighted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>