unpackaged/main/default/objects/TF_Proposal__c/fields/TF_Annual_Net_Commission__c.field-meta.xml
<CustomField>
    <fullName>TF_Annual_Net_Commission__c</fullName>
    <formula>(TF_Annual_GC__c - TF_Annual_GC__c *  TF_Rebate_of_GC__c ) + Additional_Income__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TF : Annual Net Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>