unpackaged/main/default/objects/TF_Proposal__c/fields/TF_Annual_SiS__c.field-meta.xml
<CustomField>
    <fullName>TF_Annual_SiS__c</fullName>
    <label>TF : Annual SiS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>