unpackaged/main/default/objects/TF_Proposal__c/fields/TF_Annual_SiS_Uplift__c.field-meta.xml
<CustomField>
    <fullName>TF_Annual_SiS_Uplift__c</fullName>
    <formula>IF(Expected_Uplift__c &gt; 0, (Expected_Uplift__c * TF_Annual_SiS__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TF Annual SiS Uplift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>