unpackaged/main/default/objects/TF_Proposal__c/fields/TF_ATV__c.field-meta.xml
<CustomField>
    <fullName>TF_ATV__c</fullName>
    <formula>IF(AND (TF_Annual_SiS__c &gt; 0,  TF_Annual_Forms__c  &gt; 0), TF_Annual_SiS__c / TF_Annual_Forms__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TF : ATV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>