unpackaged/main/default/objects/TF_Proposal__c/fields/TF_Current_Provider__c.field-meta.xml
<CustomField>
    <fullName>TF_Current_Provider__c</fullName>
    <label>TF Current Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planet Tax Free</fullName>
            </value>
            <value>
                <fullName>GB Tax Free</fullName>
            </value>
            <value>
                <fullName>Global Blue</fullName>
            </value>
            <value>
                <fullName>B.Free</fullName>
            </value>
            <value>
                <fullName>Caixa</fullName>
            </value>
            <value>
                <fullName>Cerfa</fullName>
            </value>
            <value>
                <fullName>Custom Cash</fullName>
            </value>
            <value>
                <fullName>Détaxe SA</fullName>
            </value>
            <value>
                <fullName>Digital Tax Free</fullName>
            </value>
            <value>
                <fullName>DSD</fullName>
            </value>
            <value>
                <fullName>Easy Tax Free</fullName>
            </value>
            <value>
                <fullName>Eurotaxfree</fullName>
            </value>
            <value>
                <fullName>EU TaxFree</fullName>
            </value>
            <value>
                <fullName>Fair Tax Free</fullName>
            </value>
            <value>
                <fullName>Fexco</fullName>
            </value>
            <value>
                <fullName>Global Blue &amp; Invoice</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Hi Sky</fullName>
            </value>
            <value>
                <fullName>Iceland Tax Free</fullName>
            </value>
            <value>
                <fullName>Innova</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>MR Antalya</fullName>
            </value>
            <value>
                <fullName>New Tax Free Vat Refund</fullName>
            </value>
            <value>
                <fullName>No Current Provider</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>PieVat</fullName>
            </value>
            <value>
                <fullName>Premier eTF</fullName>
            </value>
            <value>
                <fullName>Premier eTF &amp; GB</fullName>
            </value>
            <value>
                <fullName>Premier eTF &amp; GB &amp; Invoice</fullName>
            </value>
            <value>
                <fullName>Premier eTF &amp; Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>