unpackaged/main/default/objects/TF_Proposal__c/fields/TF_FY_NC_Weighted__c.field-meta.xml
<CustomField>
    <fullName>TF_FY_NC_Weighted__c</fullName>
    <formula>FY15__c  * Opportunity__r.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TF: FY NC (Weighted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>