unpackaged/main/default/objects/TF_Proposal__c/fields/TF_Match_Rate__c.field-meta.xml
<CustomField>
    <fullName>TF_Match_Rate__c</fullName>
    <label>TF : Match Rate %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>