unpackaged/main/default/objects/TF_Proposal__c/fields/TF_NC_Per_Form__c.field-meta.xml
<CustomField>
    <fullName>TF_NC_Per_Form__c</fullName>
    <formula>IF(AND(TF_Annual_NC__c &gt; 0, TF_Annual_Forms__c &gt; 0) , (TF_Annual_NC__c / TF_Annual_Forms__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TF: NC Per Form</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>