unpackaged/main/default/objects/TF_Proposal__c/fields/TF_Net_Commission_Actual__c.field-meta.xml
<CustomField>
    <fullName>TF_Net_Commission_Actual__c</fullName>
    <formula>Opportunity__r.Account.TF_Gross_Commission_YTD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TF Net Commission Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>