unpackaged/main/default/objects/TF_Proposal__c/fields/TF_Proposed_Solution__c.field-meta.xml
<CustomField>
    <fullName>TF_Proposed_Solution__c</fullName>
    <label>TF Proposed Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>PA - VAT Only Online</fullName>
            </value>
            <value>
                <fullName>PA - VAT Only Offline</fullName>
            </value>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>PII</fullName>
            </value>
            <value>
                <fullName>POL</fullName>
            </value>
            <value>
                <fullName>PT</fullName>
            </value>
            <value>
                <fullName>Kiosk</fullName>
            </value>
            <value>
                <fullName>PA via Distribution Channel</fullName>
            </value>
            <value>
                <fullName>eTF</fullName>
            </value>
            <value>
                <fullName>PI</fullName>
            </value>
            <value>
                <fullName>PI (Elavon)</fullName>
            </value>
            <value>
                <fullName>PI (AX Integration)</fullName>
            </value>
            <value>
                <fullName>Tokenisation Terminals</fullName>
            </value>
            <value>
                <fullName>POL Pro</fullName>
            </value>
            <value>
                <fullName>PT PAX</fullName>
            </value>
            <value>
                <fullName>Tour Operator Management</fullName>
            </value>
            <value>
                <fullName>PD</fullName>
            </value>
            <value>
                <fullName>Kiosk Cash Machine</fullName>
            </value>
            <value>
                <fullName>Voucher Card Update (VCU)</fullName>
            </value>
            <value>
                <fullName>Auto Print</fullName>
                <isActive>false</isActive>
                <label>Auto Print</label>
            </value>
            <value>
                <fullName>DCC Upgrade</fullName>
                <isActive>false</isActive>
                <label>DCC Upgrade</label>
            </value>
            <value>
                <fullName>Free Axept</fullName>
                <isActive>false</isActive>
                <label>Free Axept</label>
            </value>
            <value>
                <fullName>Free Core</fullName>
                <isActive>false</isActive>
                <label>Free Core</label>
            </value>
            <value>
                <fullName>Free Form</fullName>
                <isActive>false</isActive>
                <label>Free Form</label>
            </value>
            <value>
                <fullName>Free Solo</fullName>
                <isActive>false</isActive>
                <label>Free Solo</label>
            </value>
            <value>
                <fullName>JCC Integration</fullName>
                <isActive>false</isActive>
                <label>JCC Integration</label>
            </value>
            <value>
                <fullName>Not Supported</fullName>
                <isActive>false</isActive>
                <label>Not Supported</label>
            </value>
            <value>
                <fullName>PC Application (Finland)</fullName>
                <isActive>false</isActive>
                <label>PC Application (Finland)</label>
            </value>
            <value>
                <fullName>Premier Automatic Batch</fullName>
                <isActive>false</isActive>
                <label>Premier Automatic Batch</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>