unpackaged/main/default/objects/TF_Proposal__c/fields/TF_Rebate_of_GC__c.field-meta.xml
<CustomField>
    <fullName>TF_Rebate_of_GC__c</fullName>
    <inlineHelpText>As a percentage of Gross Commission</inlineHelpText>
    <label>TF : Rebate % of GC</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>