unpackaged/main/default/objects/TF_Proposal__c/validationRules/NC_Per_Form_Too_Low_TF_FI.validationRule-meta.xml
<ValidationRule>
    <fullName>NC_Per_Form_Too_Low_TF_FI</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Opportunity__r.Owning_Country__c = &quot;Finland&quot;, TEXT(Opportunity__r.Type) &lt;&gt; &quot;New Pan Euro&quot;, TEXT(Opportunity__r.Type) &lt;&gt; &quot;Marketing/B2C Consultancy&quot;, TF_NC_Per_Form__c &lt; 2)</errorConditionFormula>
    <errorMessage>An opportunity may not have a Net Commission Per Form below €2.00</errorMessage>
</ValidationRule>