unpackaged/main/default/objects/TF_Proposal__c/validationRules/NC_Per_Form_Too_Low_TF_IS.validationRule-meta.xml
<ValidationRule>
    <fullName>NC_Per_Form_Too_Low_TF_IS</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Opportunity__r.Owning_Country__c = &quot;Iceland&quot;, TEXT(Opportunity__r.Type) &lt;&gt; &quot;New Pan Euro&quot;, TEXT(Opportunity__r.Type) &lt;&gt; &quot;Marketing/B2C Consultancy&quot;, TF_NC_Per_Form__c &lt; 427.230951)</errorConditionFormula>
    <errorMessage>An opportunity may not have a Net Commission Per Form below €3.50</errorMessage>
</ValidationRule>