unpackaged/main/default/objects/TF_Proposal__c/validationRules/NC_Per_Form_Too_Low_TF_PL.validationRule-meta.xml
<ValidationRule>
    <fullName>NC_Per_Form_Too_Low_TF_PL</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Opportunity__r.Owning_Country__c = &quot;Poland&quot;, TEXT(Opportunity__r.Type) &lt;&gt; &quot;New Pan Euro&quot;, TEXT(Opportunity__r.Type) &lt;&gt; &quot;Marketing/B2C Consultancy&quot;, TEXT(Opportunity__r.StageName) &lt;&gt; &quot;Proposal Stopped&quot;, TF_NC_Per_Form__c &lt; 14.6699595)</errorConditionFormula>
    <errorMessage>An opportunity may not have a Net Commission Per Form below €3.50</errorMessage>
</ValidationRule>