unpackaged/main/default/objects/TF_Proposal__c/validationRules/NC_Per_Form_Too_Low_TF_RM.validationRule-meta.xml
<ValidationRule>
    <fullName>NC_Per_Form_Too_Low_TF_RM</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR(Opportunity__r.Owning_Country__c = &quot;Austria&quot;, Opportunity__r.Owning_Country__c = &quot;Cyprus&quot;,
Opportunity__r.Owning_Country__c = &quot;Greece&quot;,
Opportunity__r.Owning_Country__c = &quot;Slovak Republic&quot;), TEXT(Opportunity__r.Type) &lt;&gt; &quot;New Pan Euro&quot;, TEXT(Opportunity__r.Type) &lt;&gt; &quot;Marketing/B2C Consultancy&quot;, TF_NC_Per_Form__c &lt; 3.5)</errorConditionFormula>
    <errorMessage>An opportunity may not have a Net Commission Per Form below €3.50</errorMessage>
</ValidationRule>