unpackaged/main/default/objects/TF_Proposal__c/validationRules/NC_Too_Low_TF_NO.validationRule-meta.xml
<ValidationRule>
    <fullName>NC_Too_Low_TF_NO</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Opportunity__r.Owning_Country__c = &quot;Norway&quot;, TEXT(Opportunity__r.Type) &lt;&gt; &quot;New Pan Euro&quot;, TEXT(Opportunity__r.Type) &lt;&gt; &quot;Marketing/B2C Consultancy&quot;, TF_Annual_Net_Commission__c &lt; 4813.155)</errorConditionFormula>
    <errorMessage>An opportunity may not have a Net Commission below €500</errorMessage>
</ValidationRule>