unpackaged/main/default/objects/TF_Proposal__c/validationRules/NC_Too_Low_TF_PL.validationRule-meta.xml
<ValidationRule>
    <fullName>NC_Too_Low_TF_PL</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Opportunity__r.Owning_Country__c = &quot;Poland&quot;, TEXT(Opportunity__r.Type) &lt;&gt; &quot;New Pan Euro&quot;, TEXT(Opportunity__r.Type) &lt;&gt; &quot;Marketing/B2C Consultancy&quot;, TEXT(Opportunity__r.StageName) &lt;&gt; &quot;Proposal Stopped&quot;, TF_Annual_Net_Commission__c &lt; 2095.7085)</errorConditionFormula>
    <errorMessage>An opportunity may not have a Net Commission below €500</errorMessage>
</ValidationRule>